force-app/main/default/objects/Associated_Contact__c/Associated_Contact__c.object-meta.xml
<CustomObject>
    <description>Junction Object that Associates Account, Opportunity, Implementation, Plan, and Transition to Contact</description>
    <label>Associated Contact</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Associations</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>