force-app/main/default/objects/Associated_Contact__c/fields/AC_Temp_List__c.field-meta.xml
<CustomField>
    <fullName>AC_Temp_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AC Temp List</label>
    <type>Checkbox</type>
</CustomField>