force-app/main/default/objects/Associated_Contact__c/fields/Account_State__c.field-meta.xml
<CustomField>
    <fullName>Account_State__c</fullName>
    <formula>TEXT(Account__r.BillingStateCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account State</label>
    <type>Text</type>
</CustomField>