force-app/main/default/objects/Associated_Contact__c/fields/Additional_Trustee_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Trustee_Email__c</fullName>
    <label>Additional Trustee Email</label>
    <type>Email</type>
</CustomField>