force-app/main/default/objects/Associated_Contact__c/fields/Advisor_Communication__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Communication__c</fullName>
    <inlineHelpText>What kind of correspondence will this contact receive regarding this client&apos;s lifecycle?</inlineHelpText>
    <label>Advisor Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All_Communication</fullName>
                <default>true</default>
                <label>All Communication</label>
            </value>
            <value>
                <fullName>No_Communication</fullName>
                <label>No Communication</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>