force-app/main/default/objects/Associated_Contact__c/fields/Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Anniversary__c</fullName>
    <formula>IF(
DATE(YEAR(Plan_Sold_Date__c), MONTH(TODAY()), DAY(TODAY())) &gt;= 
DATE(YEAR(Plan_Sold_Date__c), MONTH(Plan_Sold_Date__c), DAY(Plan_Sold_Date__c)),
YEAR(TODAY()) - YEAR(Plan_Sold_Date__c),
YEAR(TODAY()) - YEAR(Plan_Sold_Date__c) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>