force-app/main/default/objects/Associated_Contact__c/fields/Calendly_Final_Review_and_Funding_Call__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Final_Review_and_Funding_Call__c</fullName>
    <formula>Implementation__r.Owner:User.Calendly_Final_Review_and_Funding_Call__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendly Final Review and Funding Call</label>
    <type>Text</type>
</CustomField>