force-app/main/default/objects/Associated_Contact__c/fields/Calendly_Introductory_Call__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Introductory_Call__c</fullName>
    <formula>Implementation__r.Owner:User.Calendly_Introductory_Call__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendly Introductory Call</label>
    <type>Text</type>
</CustomField>