force-app/main/default/objects/Associated_Contact__c/fields/Census_and_Payroll_Instructions_Sent__c.field-meta.xml
<CustomField>
    <fullName>Census_and_Payroll_Instructions_Sent__c</fullName>
    <formula>Implementation__r.Census_and_Payroll_Instructions_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Census and Payroll Instructions Sent</label>
    <type>Date</type>
</CustomField>