force-app/main/default/objects/Associated_Contact__c/fields/Client_Dashboard_Link__c.field-meta.xml
<CustomField>
    <fullName>Client_Dashboard_Link__c</fullName>
    <formula>Implementation__r.Implementation_Dashboard_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Dashboard Link</label>
    <type>Text</type>
</CustomField>