force-app/main/default/objects/Associated_Contact__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan Sponsor</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Plan Sponsor &amp; Trustee</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Financial Advisor - Operational Support</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Payroll Provider</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Interested Third Party</fullName>
            </value>
            <value>
                <fullName>Referrer</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Authorized Buyer</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>TPA - Operational Support</fullName>
            </value>
            <value>
                <fullName>TPA - Onboarding</fullName>
            </value>
            <value>
                <fullName>TPA - Sales</fullName>
            </value>
            <value>
                <fullName>Internal Payroll Contact</fullName>
            </value>
            <value>
                <fullName>External Payroll Contact</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>