force-app/main/default/objects/Associated_Contact__c/fields/Count_of_Employees_Census__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Employees_Census__c</fullName>
    <description>Count of Employees added to census from Imp Record</description>
    <formula>Implementation__r.Count_of_Employees_Census__c</formula>
    <inlineHelpText>Count of Employees added to census from Imp Record</inlineHelpText>
    <label>Count of Employees Census</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>