force-app/main/default/objects/Associated_Contact__c/fields/CSAT_Survey_Field__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Survey_Field__c</fullName>
    <formula>&quot;CSAT_NPS&amp;lang=en_US&amp;radioPicklistOptions=false&amp;simplesurvey__Account__c=&quot; + Account__c +
&quot;&amp;simplesurvey__Contact__c=&quot; + Contact__c +
&quot;&amp;Implementation__c=&quot; + Implementation__c +
&quot;&amp;Plan__c=&quot; + Plan__c +
&quot;&amp;simplesurvey__Record_Owner__c=&quot; + Implementation_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT Survey Fieldset</label>
    <type>Text</type>
</CustomField>