force-app/main/default/objects/Associated_Contact__c/fields/Current_Client_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Client_Stage__c</fullName>
    <label>Current Client Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>