force-app/main/default/objects/Associated_Contact__c/fields/Email_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipients__c</fullName>
    <label>Email Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>