force-app/main/default/objects/Associated_Contact__c/fields/Funding_Account_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Funding_Account_Confirmed__c</fullName>
    <formula>Implementation__r.Funding_Account_Confirmed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Account Confirmed</label>
    <type>Date</type>
</CustomField>