force-app/main/default/objects/Associated_Contact__c/fields/Funding_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Funding_Call_Date_Time__c</fullName>
    <formula>Implementation__r.Funding_Call_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Call Date/Time</label>
    <type>DateTime</type>
</CustomField>