force-app/main/default/objects/Associated_Contact__c/fields/How_Did_You_Hear_About_Ubiquity__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_Ubiquity__c</fullName>
    <formula>TEXT(Opportunity__r.How_did_you_hear_about_Ubiquity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How Did You Hear About Ubiquity?</label>
    <type>Text</type>
</CustomField>