force-app/main/default/objects/Associated_Contact__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipName>Master_Contact_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>