force-app/main/default/objects/Associated_Contact__c/fields/Implementation_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Completion_Date__c</fullName>
    <formula>Implementation__r.Implementation_Completion_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Completion Date</label>
    <type>Date</type>
</CustomField>