force-app/main/default/objects/Associated_Contact__c/fields/Implementation_Name__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Name__c</fullName>
    <formula>Implementation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Name</label>
    <type>Text</type>
</CustomField>