force-app/main/default/objects/Associated_Contact__c/fields/Implementation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Owner__c</fullName>
    <formula>Implementation__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Owner</label>
    <type>Text</type>
</CustomField>