force-app/main/default/objects/Associated_Contact__c/fields/Implementation_Owner_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Owner_Calendly__c</fullName>
    <description>Calendly link from user record to merge into RPC welcome email</description>
    <formula>Implementation__r.Owner:User.Calendly_Intro_Plan_Design__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calendly link from user record to merge into RPC welcome email</inlineHelpText>
    <label>Implementation Owner Calendly</label>
    <type>Text</type>
</CustomField>