force-app/main/default/objects/Associated_Contact__c/fields/Implementation_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Owner_Email__c</fullName>
    <formula>Implementation__r.Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Owner Email</label>
    <type>Text</type>
</CustomField>