force-app/main/default/objects/Associated_Contact__c/fields/Implementation_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Owner_Phone__c</fullName>
    <formula>Implementation__r.Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Owner Phone</label>
    <type>Text</type>
</CustomField>