force-app/main/default/objects/Associated_Contact__c/fields/Implementation_Owner_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Owner_Time_Zone__c</fullName>
    <formula>TEXT(Implementation__r.Owner:User.TimeZoneSidKey)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Owner Time Zone</label>
    <type>Text</type>
</CustomField>