force-app/main/default/objects/Associated_Contact__c/fields/Implementation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Stage__c</fullName>
    <label>Implementation Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>