force-app/main/default/objects/Associated_Contact__c/fields/Implementation_Updated__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Updated__c</fullName>
    <label>Implementation Updated</label>
    <type>Date</type>
</CustomField>