force-app/main/default/objects/Associated_Contact__c/fields/Implementation_Updated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Updated_Date_Time__c</fullName>
    <label>Implementation Updated (Date &amp; Time)</label>
    <type>DateTime</type>
</CustomField>