force-app/main/default/objects/Associated_Contact__c/fields/Intro_to_K_oncierge_Complete__c.field-meta.xml
<CustomField>
    <fullName>Intro_to_K_oncierge_Complete__c</fullName>
    <formula>IF(NOT(ISBLANK(Implementation__r.Intro_to_Koncierge_CST__c)), Implementation__r.Intro_to_Koncierge_CST__c,  Implementation__r.Intro_to_K_oncierge__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intro to (K)oncierge Complete</label>
    <type>Date</type>
</CustomField>