force-app/main/default/objects/Associated_Contact__c/fields/Intro_to_K_oncierge_CST__c.field-meta.xml
<CustomField>
    <fullName>Intro_to_K_oncierge_CST__c</fullName>
    <formula>Implementation__r.Intro_to_Koncierge_CST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intro to (K)oncierge &amp; CST</label>
    <type>Date</type>
</CustomField>