force-app/main/default/objects/Associated_Contact__c/fields/K_oncierge_Initial_Call__c.field-meta.xml
<CustomField>
    <fullName>K_oncierge_Initial_Call__c</fullName>
    <formula>Implementation__r.Koncierge_Initial_Call__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(K)oncierge Initial Call</label>
    <type>Date</type>
</CustomField>