force-app/main/default/objects/Associated_Contact__c/fields/Kotapay_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Survey_Link__c</fullName>
    <formula>&quot;http://myubiquity.force.com/survey?ratingType=3&amp;RecordTypeId=0121G000000RlC2QAK&amp;fieldset=Kotapay_Contract_Data_Collection&amp;lang=en_US&amp;radioPicklistOptions=false&amp;simplesurvey__Account__c=&quot; + Account__c + 
&quot;&amp;simplesurvey__Contact__c=&quot; +  Contact__c +&quot;&amp;Implementation__c=&quot; + Implementation__c + 
&quot;&amp;Plan__c=&quot; +  Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kotapay Survey Link</label>
    <type>Text</type>
</CustomField>