force-app/main/default/objects/Associated_Contact__c/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <formula>TEXT(Opportunity__r.LeadSourceDetail__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source Detail</label>
    <type>Text</type>
</CustomField>