force-app/main/default/objects/Associated_Contact__c/fields/Master_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Account_Name__c</fullName>
    <formula>Account__r.Master_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Account Name</label>
    <type>Text</type>
</CustomField>