force-app/main/default/objects/Associated_Contact__c/fields/Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Link__c</fullName>
    <formula>Implementation__r.Owner:User.Meeting_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Link</label>
    <type>Text</type>
</CustomField>