force-app/main/default/objects/Associated_Contact__c/fields/New_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity_Stage__c</fullName>
    <label>New Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>