force-app/main/default/objects/Associated_Contact__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>Number of Employees from Account</description>
    <formula>Account__r.NumberOfEmployees</formula>
    <inlineHelpText>Number of Employees from Account</inlineHelpText>
    <label>Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>