force-app/main/default/objects/Associated_Contact__c/fields/OPD_PRR_Complete__c.field-meta.xml
<CustomField>
    <fullName>OPD_PRR_Complete__c</fullName>
    <formula>Implementation__r.OPD_PRR_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPD/PRR Complete</label>
    <type>Date</type>
</CustomField>