force-app/main/default/objects/Associated_Contact__c/fields/Opportunity_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Full_Name__c</fullName>
    <formula>Opportunity__r.Owner.FirstName + &quot; &quot; + Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Full Name</label>
    <type>Text</type>
</CustomField>