force-app/main/default/objects/Associated_Contact__c/fields/Partner_Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Client_Status__c</fullName>
    <label>Partner Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Clients</fullName>
            </value>
            <value>
                <fullName>Active Client(s)</fullName>
            </value>
            <value>
                <fullName>Past Client(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>