force-app/main/default/objects/Associated_Contact__c/fields/PayKon_Welcome_Survey__c.field-meta.xml
<CustomField>
    <fullName>PayKon_Welcome_Survey__c</fullName>
    <description>Survey link for Payroll Koncierge Welcome Email</description>
    <formula>&quot;http://myubiquity.force.com/survey?ratingType=3&amp;RecordTypeId=0121G000000RlEwQAK&amp;fieldset=Payroll_Koncierge&amp;lang=en_US&amp;radioPicklistOptions=false&amp;simplesurvey__Account__c=&quot; + Account__c + 
&quot;&amp;simplesurvey__Contact__c=&quot; +  Contact__c +&quot;&amp;Implementation__c=&quot; + Implementation__c + 
&quot;&amp;Plan__c=&quot; +  Plan__c</formula>
    <inlineHelpText>Survey link for Payroll Koncierge Welcome Email</inlineHelpText>
    <label>PayKon Welcome Survey</label>
    <type>Text</type>
</CustomField>