force-app/main/default/objects/Associated_Contact__c/fields/Payroll_Schedule_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Schedule_Confirmed__c</fullName>
    <formula>Implementation__r.Payroll_Schedule_Confirmed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Schedule Confirmed</label>
    <type>Date</type>
</CustomField>