force-app/main/default/objects/Associated_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>HYPERLINK(&quot;callto://+1&quot; &amp; Contact__r.Phone, Contact__r.Phone,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>