force-app/main/default/objects/Associated_Contact__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipName>Master_Contact_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>