force-app/main/default/objects/Associated_Contact__c/fields/Plan_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Plan_Account_ID__c</fullName>
    <formula>Plan__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Account ID</label>
    <type>Text</type>
</CustomField>