force-app/main/default/objects/Associated_Contact__c/fields/Plan_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Anniversary_Date__c</fullName>
    <formula>IF(
DATE(YEAR(Plan_Sold_Date__c) + (YEAR(TODAY()) - YEAR(Plan_Sold_Date__c)), 
MONTH(Plan_Sold_Date__c), 
DAY(Plan_Sold_Date__c)) &gt;= TODAY(),
DATE(YEAR(Plan_Sold_Date__c) + (YEAR(TODAY()) - YEAR(Plan_Sold_Date__c)), 
MONTH( Plan_Sold_Date__c ), 
DAY(Plan_Sold_Date__c)),
DATE(YEAR(Plan_Sold_Date__c) + (YEAR(TODAY()) - YEAR(Plan_Sold_Date__c)) + 1, 
MONTH(Plan_Sold_Date__c), 
DAY(Plan_Sold_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Anniversary Date</label>
    <type>Date</type>
</CustomField>