force-app/main/default/objects/Associated_Contact__c/fields/Plan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Effective_Date__c</fullName>
    <formula>Implementation__r.Ubiquity_Plan_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Effective Date</label>
    <type>Date</type>
</CustomField>