force-app/main/default/objects/Associated_Contact__c/fields/Plan_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sold_Date__c</fullName>
    <formula>Plan__r.Plan_Sold_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Sold Date</label>
    <type>Date</type>
</CustomField>