force-app/main/default/objects/Associated_Contact__c/fields/Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status__c</fullName>
    <formula>TEXT( Plan__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Status</label>
    <type>Text</type>
</CustomField>