force-app/main/default/objects/Associated_Contact__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <formula>TEXT(Implementation__r.Plan_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Type</label>
    <type>Text</type>
</CustomField>