force-app/main/default/objects/Associated_Contact__c/fields/Post_OPD_PRR_Docs_Sent__c.field-meta.xml
<CustomField>
    <fullName>Post_OPD_PRR_Docs_Sent__c</fullName>
    <formula>Implementation__r.Post_OPD_PRR_Docs_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post OPD/PRR Docs Sent</label>
    <type>Date</type>
</CustomField>