force-app/main/default/objects/Associated_Contact__c/fields/Primary_Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Advisor_Email__c</fullName>
    <label>Primary Advisor Email</label>
    <type>Email</type>
</CustomField>