force-app/main/default/objects/Associated_Contact__c/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <formula>TEXT(Opportunity__r.Referral_Partner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Partner</label>
    <type>Text</type>
</CustomField>