force-app/main/default/objects/Associated_Contact__c/fields/Secondary_Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Advisor_Email__c</fullName>
    <label>Secondary Advisor Email</label>
    <type>Email</type>
</CustomField>