force-app/main/default/objects/Associated_Contact__c/fields/Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Option__c</fullName>
    <formula>IF(Plan__c =&quot;&quot;,  TEXT(Implementation__r.Service_Option__c) , TEXT(Plan__r.Service_Option__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Option</label>
    <type>Text</type>
</CustomField>