force-app/main/default/objects/Associated_Contact__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <formula>IF(Master_Account_Name__c = &quot;Edward Jones - Home Office&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Instructions</label>
    <type>Checkbox</type>
</CustomField>