force-app/main/default/objects/Associated_Contact__c/fields/Suppress_All_Emails__c.field-meta.xml
<CustomField>
    <fullName>Suppress_All_Emails__c</fullName>
    <formula>Implementation__r.Suppress_All_Emails__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suppress All Emails</label>
    <type>Checkbox</type>
</CustomField>