force-app/main/default/objects/Associated_Contact__c/fields/Temp_List__c.field-meta.xml
<CustomField>
    <fullName>Temp_List__c</fullName>
    <formula>Contact__r.Temp_List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp List</label>
    <type>Checkbox</type>
</CustomField>