force-app/main/default/objects/Associated_Contact__c/fields/Tertiary_Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Advisor_Email__c</fullName>
    <label>Tertiary Advisor Email</label>
    <type>Email</type>
</CustomField>