force-app/main/default/objects/Associated_Contact__c/fields/Text_Opt_Survey__c.field-meta.xml
<CustomField>
    <fullName>Text_Opt_Survey__c</fullName>
    <description>Survey link for opting into Text Message Updates</description>
    <formula>&quot;https://myubiquity.secure.force.com/survey/?ratingType=3&amp;RecordTypeId=0121G000000Rlg7QAC&amp;fieldset=Text_Opt_In&amp;lang=en_US&amp;radioPicklistOptions=false&amp;simplesurvey__Account__c=&quot; + Account__c +
&quot;&amp;simplesurvey__Contact__c=&quot; + Contact__c +&quot;&amp;Implementation__c=&quot; + Implementation__c +
&quot;&amp;Plan__c=&quot; + Plan__c</formula>
    <inlineHelpText>Survey link for opting into Text Message Updates</inlineHelpText>
    <label>Text Opt Survey</label>
    <type>Text</type>
</CustomField>