force-app/main/default/objects/Associated_Contact__c/fields/TPA_Documents_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>TPA_Documents_Uploaded__c</fullName>
    <formula>Implementation__r.TPA_Documents_Uploaded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TPA Documents Uploaded</label>
    <type>Date</type>
</CustomField>