force-app/main/default/objects/Associated_Contact__c/fields/TPA_Operational_Email__c.field-meta.xml
<CustomField>
    <fullName>TPA_Operational_Email__c</fullName>
    <label>TPA Operational Email</label>
    <type>Email</type>
</CustomField>