force-app/main/default/objects/Associated_Contact__c/fields/Transition__c.field-meta.xml
<CustomField>
    <fullName>Transition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transition</label>
    <referenceTo>Transition__c</referenceTo>
    <relationshipName>Master_Contact_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>