force-app/main/default/objects/Associated_Contact__c/fields/Transition_Complete__c.field-meta.xml
<CustomField>
    <fullName>Transition_Complete__c</fullName>
    <formula>Transition__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transition Complete</label>
    <type>Date</type>
</CustomField>